# Dev-of-an-AI-Powered-Resume-Analy-and-Job-Recom-Sys-with-Autom-LinkedIn-Data-Ext

./: README.md
Dev-of-an-AI-Powered-Resume-Analy-and-Job-Recom-Sys-with-Autom-LinkedIn-Data-Ext_Nov_Batch-6_2025-main/: README.md  app.py  main.py  pyproject.toml  requirements.txt
Dev-of-an-AI-Powered-Resume-Analy-and-Job-Recom-Sys-with-Autom-LinkedIn-Data-Ext_Nov_Batch-6_2025-main/backend/: auth.py  llm_analyzer.py  recommendations.py  resume_parser.py  resume_scorer.py  scraper.py
Dev-of-an-AI-Powered-Resume-Analy-and-Job-Recom-Sys-with-Autom-LinkedIn-Data-Ext_Nov_Batch-6_2025-main/data/: database.db
Dev-of-an-AI-Powered-Resume-Analy-and-Job-Recom-Sys-with-Autom-LinkedIn-Data-Ext_Nov_Batch-6_2025-main/frontend/: analysis.py  dashboard.py  job_recommendations.py  login.py  modern_components.py  pages.py  profile.py  registration.py  resume_analysis.py  resume_scoring.py  settings.py  skills_gap.py  styles.py  ui_components.py
Dev-of-an-AI-Powered-Resume-Analy-and-Job-Recom-Sys-with-Autom-LinkedIn-Data-Ext_Nov_Batch-6_2025-main/tests/: integration_results.md
Dev-of-an-AI-Powered-Resume-Analy-and-Job-Recom-Sys-with-Autom-LinkedIn-Data-Ext_Nov_Batch-6_2025-main/utils/: database.py
